--- a/style.css
+++ b/style.css
@@ -204,6 +204,7 @@ main button {
 .send {
   margin: 8px;
   width: 20%;
+  text-align: center;
 }
 @media only screen and (min-width: 375px) and (max-width: 812px) {
   header {
